--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1126,7 +1126,9 @@ body {
   height: 100vh;
 }
 .sc-purest .purset-video video {
-  height: 100%;
+      height: 100%;
+    width: 100%;
+    object-fit: cover;
 }
 .sc-purest .purset-video::after {
   content: "";
